--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16",
-    "shortid": "^2.2.16",
-    "valid-url": "^1.0.9"
+    "redis": "^3.1.2"
   }
 }
